--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -178,7 +178,7 @@ aside .search:hover label svg path {
   stroke: #FC7361;
 }
 aside .search label {
-  display: contents;
+  /* display: contents; */
   cursor: pointer;
 }
 aside .search input {
@@ -442,6 +442,37 @@ aside .login svg {
 .comments_group .about_block .block_commends .commends_group .commend .right_text_group .likes {
   justify-content: flex-start;
   gap: 8px;
+}
+
+.article-preview {
+  height: 260px;
+  border-radius: 5px;
+  text-align: center;
+  overflow: hidden;
+}
+
+#swiper-articles .article-preview img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.author-link {
+  color: var(--gray, #A4A0A0);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  transition: 0.3s;
+}
+
+.author-link:hover {
+  color: #000 !important;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
 }
 
 @media (min-width: 768px) and (max-width: 1279px) {
